--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Games application</h1>
-    
+    <ol id="list"></ol>
     <script src = "/src/main.js"></script>
 </body>
 </html>
